# ISMRAN_Data_Analysis

./: CMakeLists.txt  README  calibration.root
Characterization/: CMakeLists.txt
Characterization/inc/: CharacterizationFileReader.h  Event.h  Helpers.h
Characterization/src/: CharacterizationFileReader.cpp  Helpers.cpp
Characterization/test/: Test_Listing.cpp  Test_Listing_Root.cpp
Characterization/test/anal/: .Test_GenerateCalibrationFile.cpp.swp  Test_Calibration.cpp  Test_GenerateCalibrationFile.cpp
Characterization/test/core/: .Test_RegExp.cpp.swp  Test_DirListing.cpp  Test_RegExp.cpp
ISMRAN_dqm/: CMakeLists.txt
ISMRAN_dqm/src/: .Database.cpp.swp
ISMRAN_dqm/test/: Test_Update_Db_For_Deleted_Files.cpp  Test_Update_Db_For_Files_Offline.cpp
cmake/modules/: FindDqm.cmake
inc/: Analyzer_F.h  Calibration.h  DictLinkDef.h  HardwareNomenclature.h  Helpers.h  Mapping.txt  MuonPeakAnalyzer.h  PairFinder.h  Plotter.h  ScintillatorBar_F.h  ScintillatorBar_V2.h  SingleMuonTrack.h  TreeEntry.h  includes.hh
macros/: subtractBack.C
rootfiles/: MuonPeak.root  MuonPeak_H9.root  README
scripts/: execute.sh  run.sh  runshots.sh
src/: .PairFinder.cpp.swp  Analyzer_F.cpp  Calibration.cpp  HardwareNomenclature.cpp  Helpers.cpp  MuonPeakAnalyzer.cpp  PairFinder.cpp  Plotter.cpp  PsBar.cpp  ScintillatorBar_F.cpp  ScintillatorBar_V2.cpp  SingleMuonTrack.cpp
test/: FitMuonLifeTime.cpp  Test_Analyzer_F.cpp  Test_Analyzer_F_Calibrated.cpp  Test_Analyzer_F_Shots.cpp  Test_AutomateMuonCounting.cpp  Test_DrawCalibratedPlots.cpp  Test_GenerateMuonPeakPosTree.cpp  Test_GenerateMuonPeakPosTree_Smart.cpp  Test_GenerateMuonTracks.cpp  Test_GetFileNamesVector.cpp  Test_HistFromMysql.cpp  Test_MuonArrivalTime.cpp  Test_MuonFileReader.cpp  Test_MuonLifeTime.cpp  Test_MuonLifeTime.cpp.simplified  Test_MuonPeakPositionReader.cpp  Test_MuonTrackAnalysis.cpp  Test_Muon_BarePeakPositionReader.cpp  Test_PairFinder.cpp  Test_PeakPosition.cpp  Test_ProcessFiles.cpp  Test_ProcessFiles_Manual.cpp  Test_ReverseMuon.cpp  Test_ScintillatorFileReader.cpp  Test_SmallChunk.cpp  Test_VarOfMuonPeakWithTime.cpp
test/ML/: TestML_GenTrainingData.cpp  TestML_MuonClassification.cpp  TestML_MuonClassification_FromMuonTrack.cpp  TestML_MuonClassification_v2.cpp
test/calib/: Test_Calib_DelT.cpp  Test_PeakPos.cpp
test/core/: Test_FoldUnfold.cpp  Test_Mapping.cpp  smart.cpp
test/toSchedule/: README  Schedule_GenerateMuonTracks.cpp  Schedule_MuonSinglePointCalibration.cpp  Test_GenerateSinglePointMuonCalibrationFile.cpp  Test_ScheduleGenerateMuonTracks.cpp
